[gd_scene load_steps=9 format=2]

[ext_resource path="res://white.png" type="Texture" id=1]
[ext_resource path="res://game/entities/player/player.gd" type="Script" id=2]
[ext_resource path="res://game/logic/utility_ai/utility.gd" type="Script" id=3]
[ext_resource path="res://game/entities/player/Idle.gd" type="Script" id=4]
[ext_resource path="res://game/entities/player/find_foodd.gd" type="Script" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 20.0

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 1, 0.321569, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 1 )

[node name="Player" type="Area2D" groups=["player"]]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
modulate = Color( 0, 0.529412, 1, 1 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="ProgressBar" type="ProgressBar" parent="."]
margin_left = -55.0
margin_top = -66.0
margin_right = 55.0
margin_bottom = -39.0
custom_styles/fg = SubResource( 2 )
custom_styles/bg = SubResource( 3 )
value = 100.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hunger" type="Timer" parent="."]
wait_time = 0.2
autostart = true

[node name="Utility" type="Node" parent="."]
script = ExtResource( 3 )

[node name="Idle" type="Node" parent="Utility"]
script = ExtResource( 4 )

[node name="FindFood" type="Node" parent="Utility"]
script = ExtResource( 5 )

[node name="evaluate" type="Timer" parent="."]
autostart = true

[node name="Label" type="Label" parent="."]
margin_left = -122.0
margin_top = -258.0
margin_right = 69.0
margin_bottom = -140.0
text = "sdfsdf"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="area_entered" from="." to="." method="_on_Player_area_entered"]
[connection signal="timeout" from="Hunger" to="." method="_on_Hunger_timeout"]
[connection signal="timeout" from="evaluate" to="." method="_on_evaluate_timeout"]
